2010-12-08  Andreas Kupries  <andreask@activestate.com>

	* generic/memchan.c: Second set of patches by Stuart. Moved
	* generic/memchanInt.h: string.h inclusion to internal header,
	* Makefile.in: and moved the .SUFFIXES declaration to a place
	  where the OpenBSD make can use it.

	* doc/fifo.man: Applied patch supplied by Stuart Cassoff fixing
	* doc/fifo2.man: various typos in the manpages.
	* doc/memchan.man:
	* doc/null.man:
	* doc/zero.man:

2010-12-06  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* Dropped the old build files under unix/ and win/ in favor of the
	  toplevel TEA files.

	* configure.in:  Updated to TEA 3.9.
	* tclconfig/README.txt:
	* tclconfig/tcl.m4:
	* configure:

	* ANNOUNCE: Version bumped to 2.3.
	* ANNOUNCE.MAIL:
	* ChangeLog:
	* ChangeLog.short:
	* DESCRIPTION:
	* LSM:
	* README:
	* teapot.txt:

	* Makefile.in: Updated the dist target.

2009-03-16  Andreas Kupries  <andreask@activestate.com>

	* generic/bugExt.c: Fixed [SF Bug 2687845] by Stuart Cassoff,
	* generic/bugFix.c: added inclusion of memchanInt.h to these
	* generic/bugRange.c: files to declare memcpy().

2008-10-03  Andreas Kupries  <andreask@activestate.com>

	* generic/memchanInt.h: Fixed [SF Bug 2078168] by Larry Virden
	  <lvirden@users.sourceforge.net>. Added inclusion of header
	  <string.h> to get declarations for strcmp, memcpy, and memset.

2007-11-13  Andreas Kupries  <andreask@activestate.com>

	* teapot.txt: New file, basic meta data of the package for TEApot
	  compatible repositories.

2006-05-08  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* Makefile.in:      Fixed make test target.

2006-01-24  Andreas Kupries <andreask@activestate.com>

	* tclconfig/tcl.m4: Updated to TEA 3.5
	* configure.in:     Ditto.
	* configure:        Regenerated.

2005-06-08  Andreas Kupries <andreask@activestate.com>

	* Makefile.in: Updated the toplevel build system to TEA 3.2.
	* configure.in:
	* generic/init.c:
	* generic/memchanStubLib.c:
	* tclconfig/tcl.m4:
