@@ -12,6 +12,7 @@
  */
 
 #include "buf.h"
+#include "memchanInt.h"
 
 /*
  * Codestring used to associate the
@@ -63,7 +64,7 @@ Buf_IsInitialized (interp)
      Tcl_Interp* interp;
 {
   Tcl_InterpDeleteProc* proc = (Tcl_InterpDeleteProc*) NULL;
-  return (int) Tcl_GetAssocData (interp, ASSOC, &proc);
+  return PTR2INT (Tcl_GetAssocData (interp, ASSOC, &proc));
 }
 
 /*
@@ -102,7 +103,7 @@ Buf_Init (interp)
 
   Tcl_SetAssocData (interp, ASSOC,
 		    (Tcl_InterpDeleteProc*) NULL,
-		    (ClientData) 1);
+		    INT2PTR (1));
 
   return TCL_OK;
 }
