@@ -1,5 +1,9 @@
 2010-12-08  Andreas Kupries  <andreask@activestate.com>
 
+	* generic/memchanInt.h: Swiped the INT2PTR/PTR2INT macros from
+	* generic/buf.c: Tcl and updated the code handling AssocData to
+	  use them, kill a few warnings on 64bit systems.
+
 	* generic/memchan.c: Second set of patches by Stuart. Moved
 	* generic/memchanInt.h: string.h inclusion to internal header,
 	* Makefile.in: and moved the .SUFFIXES declaration to a place
